Fix whitespace in content list

--- a/_scss/components/_content-panel.scss
+++ b/_scss/components/_content-panel.scss
@@ -4,6 +4,7 @@
   max-width: $page-padding * 4 + $content-sidebar-width + $content-width;
   padding: $page-padding;
   margin-left: $header-width;
+  font-size: 0;
 }
 
 .content-panel {
