--- a/_scss/global/_document.scss
+++ b/_scss/global/_document.scss
@@ -56,6 +56,7 @@ h5 {
 
 article ol,
 article ul,
+article td,
 p {
   margin: 1.5em 0;
   font-family: $font;
